# hand_sign

./: .gitignore  .pre-commit-config.yaml  dataset.py  demo.py  evaluate.py  jutsu.py  main.py  model.py  naruto.py  pyproject.toml  pyrightconfig.json  record.py  utils.py
cnnclassifier/: dataset.py  evaluate.py  model.py  record.py  train.py
mptransformer/: model.py  train.py
scripts/: convert_image.py  detect_mp.py  detect_yolo.py  reindex.py
tests/: test_cnn.py  test_jutsu.py
